# qq-bot

./: .env  .gitignore  README.md  bot.py  pyproject.toml
docs/superpowers/plans/: 2026-04-15-async-blocking-fix-plan.md  2026-04-15-qq-message-splitting.md
docs/superpowers/specs/: 2026-04-15-async-blocking-fix-design.md  2026-04-15-qq-message-splitting-design.md
faiss_index_store/: index.faiss  index.pkl
pachong/: comments_output.txt
src/agents/: agent_config.py  checkagent.py
src/config/: Colors.py  TEST.py  llmconfig.py  longcat_client.py  pollinations_client.py
src/libraries/: image.py  maimai_best_40.py  maimai_best_50.py
src/plugins/: public.py  qqagentbot.py  system_prompt.py
src/rag/: load_index.py
src/security/: __init__.py  encryption.py
src/skills/: __init__.py  loader.py  registry.py
src/skills/skill/: __init__.py  luokewangkuo.py  summary_crawl_content.py  summary_gruop_content.py
src/tools/: crawl.py  load_context.py  load_image.py  load_skill.py  split_message.py  user_at.py
src/util/: custom_exception.py  image_utils.py  middleware.py  runtime.py
test/: create_index.py  dataclean.py  pipeline.py  pipilinev2.py  pipilinev3.py  query_index.py
